# Filecompressor---Zemita

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  compile_commands.json
include/zemita/: buffered_reader.hpp  buffered_writer.hpp  container.hpp  utils.hpp  zemita.hpp
src/: CMakeLists.txt  zemita.cpp  zemita.hpp
src/CLI/: zemita_main.cpp
src/codecs/: ICodec.hpp  lz77.cpp  lz77.hpp
src/container/: container.cpp  container.hpp
src/io/: buffered_reader.cpp  buffered_reader.hpp  buffered_writer.cpp  buffered_writer.hpp  ring_buffer.hpp
test/: IMG_0619.zem  bible.rar  bible.zem  godtier.rar  godtier.zem  image.zem  tester.txt  tester.zem  zbel.txt  zbel.txt.zem  zbel.zem  zbelDE.txt  zeb.rar  zeb.txt  zeb.zem  zebDE - Kopie (2).txt  zebDE - Kopie (2).zem  zebDE - Kopie.txt  zebDE - Kopie.zem  zebDE.txt  zebDE.zem
